# cpp-orderbook-matching-engine

./: .gitignore  CMakeLists.txt  README.md
include/: MatchingEngine.h  ObjectPool.h  Order.h  OrderBook.h  Trade.h  Types.h
src/: MatchingEngine.cpp  OrderBook.cpp  benchmark.cpp  main.cpp
tests/: test_matching.cpp
